--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <link rel="icon" type="image/png" href="../img/logo.png">
+
   <title data-translate="titulo.home">AGROSYSTEM - Home</title>
 
   <link rel="stylesheet" href="../css/estilos.css">
