--- a/src/pages/registrarse.html
+++ b/src/pages/registrarse.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/png" href="../img/logo.png">
+
     <title>AgroSystem - Registro</title>
     <link rel="stylesheet" href="../css/registrarse.css">
 </head>
