--- a/src/pages/tarjeta_salud.html
+++ b/src/pages/tarjeta_salud.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="icon" type="image/png" href="../img/logo.png">
+
   <title>Tarjeta de Salud - Agrosystem</title>
   <link rel="stylesheet" href="../css/tarjeta_salud.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
