--- a/src/pages/estadisticas.html
+++ b/src/pages/estadisticas.html
@@ -6,9 +6,9 @@
       <link rel="icon" type="image/png" href="../img/logo.png">
 
   <title>Estadísticas - AGROSYSTEM</title>
-  <link rel="stylesheet" href="../css/estilos.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link rel="stylesheet" href="../css/animales.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     .contenido { 
       display: flex; 
